# CursedLambdaFunctions

./: .gitignore
baseLambda/: makefile
baseLambda/infra/: lambdas.tf
baseLambda/lambda/: main.mjs
bash/: makefile
bash/infra/: lambda.tf  lambda_layer.tf  main.tf  terraform.tfstate  terraform.tfstate.backup
bash/src/: bootstrap  handler.sh
deterministicGcExecution/: makefile
deterministicGcExecution/infra/: lambda.tf
deterministicGcExecution/src/: main.mjs
deterministicGcExecution/wrapper/: wrapper
extensionLogic/: makefile
extensionLogic/extension/src/: main.rs
extensionLogic/extension/src/methods/: hello_world.rs
extensionLogic/infra/: lambda_layer.tf  lambdas.tf
extensionLogic/lambda/: main.mjs
extensionProxy/: makefile
extensionProxy/extension/: Cargo.toml
extensionProxy/extension/opt/: entrypoint
extensionProxy/extension/src/: main.rs
extensionProxy/extension/src/actions/: mod.rs  register_extension.rs
extensionProxy/extension/src/env/: env.rs
extensionProxy/extension/src/http_client/: mod.rs
extensionProxy/extension/src/methods/: init_error.rs  invocation_error.rs  invocation_next.rs  invocation_response.rs  mod.rs
extensionProxy/extension/src/types/: error_request_body.rs  error_response_body.rs  mod.rs
extensionProxy/infra/: lambda_layer.tf  lambdas.tf  terraform.tfstate  terraform.tfstate.backup
extensionProxy/lambda/: main.py
