[package]
name = "extension"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
axum = "0.7.5"
futures = { version = "0.3.30", features = ["unstable", "bilock"]}
lambda-extension = "0.11.0"
reqwest = { version = "0.12.5", features = ["json", "native-tls-vendored"]}
serde = "1"
serde_json = "1.0.119"
tokio = { version = "1", features = ["macros", "signal", ] }

[dev-dependencies]
axum-macros = "0.4.1"
